workflow to build and push image to ecr

--- a/.github/workflows/v2-docker-build-push-ecr.yml
+++ b/.github/workflows/v2-docker-build-push-ecr.yml
@@ -41,9 +41,9 @@ on:
         required: false
         default: 'main'
 
-  push:
-    branches:
-      - 'ci/image-scan-ecr'
+  # push:
+  #   branches:
+  #     - 'ci/image-scan-ecr'
  
 jobs:
   build-and-push-schedule:
