workflow to build and push image to ecr

--- a/.github/workflows/v2-docker-build-push-ecr.yml
+++ b/.github/workflows/v2-docker-build-push-ecr.yml
@@ -105,6 +105,9 @@ jobs:
     if: github.event_name == 'workflow_dispatch'
     runs-on: ubuntu-latest
     timeout-minutes: 360
+    permissions:
+      id-token: write
+      contents: read
 
     steps:
       - name: Configure AWS credentials
