--- a/.github/workflows/v2-docker-build-push-ecr.yml
+++ b/.github/workflows/v2-docker-build-push-ecr.yml
@@ -50,6 +50,9 @@ jobs:
     if: github.event_name == 'schedule'
     runs-on: ubuntu-latest
     timeout-minutes: 360
+    permissions:
+      id-token: write
+      contents: read
 
     strategy:
       matrix:
@@ -78,6 +81,21 @@ jobs:
       max-parallel: 1
 
     steps:
+      # Free up disk space first as the image to build is very large
+      - name: Free up disk space
+        run: |
+          bash .ci/free_disk_space.sh
+                
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v4
+        with:
+          role-to-assume: ${{ vars.AWS_ROLE_TO_ASSUME }}
+          aws-region: ${{ vars.AWS_REGION }}
+
+      - name: Login to ECR
+        id: login-ecr
+        uses: aws-actions/amazon-ecr-login@v2      
+
       - name: Checkout code
         uses: actions/checkout@v4
         with:
@@ -110,6 +128,11 @@ jobs:
       contents: read
 
     steps:
+      # Free up disk space first as the image to build is very large
+      - name: Free up disk space
+        run: |
+          bash .ci/free_disk_space.sh
+
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
