upgrade next version to 15.2.4

--- a/aiverify-portal/package.json
+++ b/aiverify-portal/package.json
@@ -38,7 +38,7 @@
     "lodash": "^4.17.21",
     "lucide-react": "^0.446.0",
     "mdx-bundler": "^10.0.3",
-    "next": "15.2.3",
+    "next": "^15.2.4",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-error-boundary": "^5.0.0",
