--- a/.github/workflows/v2-docker-build-push.yml
+++ b/.github/workflows/v2-docker-build-push.yml
@@ -18,18 +18,23 @@ on:
   workflow_dispatch:
     inputs:
       branch_to_test:
-        description: 'Branch or tag to run docker build'
+        description: 'Branch or tag to checkout'
         required: true
-        default: 'v2.x'
+        default: 'main'
         type: string
       image_to_build:
         description: 'Name of image to build'
         required: true
         default: 'aiverify-apigw'
       image_tag:
-        description: 'Image tag'
+        description: 'Tag for the image, e.g. 2.0.2'
         required: false
-        
+
+  push:
+    paths:
+      - '**/pyproject.toml'
+      - '**/package.json'
+              
   # push:
   #   branches: [ main ]
   #   paths:
@@ -61,26 +66,31 @@ jobs:
 
       - name: Set env variables
         run: |
-          if [ "${{ github.event_name }}" == "pull_request" ]; then
-            echo "BRANCH_TO_TEST=${{ github.event.pull_request.head.ref }}" >> "$GITHUB_ENV"
-            echo "PR_NUM=#${{ github.event.pull_request.number }}" >> "$GITHUB_ENV"
-            PR_FILES=$(gh pr view ${{ github.event.pull_request.number }} --repo github.com/${{ github.repository }} --json files --jq '.files[].path' | paste -sd "," -)
-            echo "Files changed in this pull request:"
-            echo "$PR_FILES"
-            echo "CHANGED_FILES=${PR_FILES}" >> $GITHUB_ENV
-            echo "IMAGE_TAG=" >> $GITHUB_ENV
-          elif [ "${{ github.event_name }}" == "workflow_dispatch" ]; then
-            echo "BRANCH_TO_TEST=${{ inputs.branch_to_test }}" >> $GITHUB_ENV
-            echo "PR_NUM=#000" >> $GITHUB_ENV
-            echo "CHANGED_FILES=${{ inputs.image_to_build }}" >> $GITHUB_ENV
-            echo "IMAGE_TAG=${{ inputs.image_tag }}" >> $GITHUB_ENV
+          if [ "${{ github.event_name }}" == "workflow_dispatch" ]; then
+            echo "BRANCH_TO_TEST=${{ inputs.branch_to_test }}" >> "$GITHUB_ENV"
+            echo "PR_NUM=#000" >> "$GITHUB_ENV"
+            echo "CHANGED_FILES=${{ inputs.image_to_build }}" >> "$GITHUB_ENV"
+            echo "IMAGE_TAG=${{ inputs.image_tag }}" >> "$GITHUB_ENV"
           elif [ "${{ github.event_name }}" == "push" ]; then
             echo "BRANCH_TO_TEST=${{ github.ref }}" >> $GITHUB_ENV
             echo "PR_NUM=#000" >> $GITHUB_ENV
-            PUSH_FILES=$(gh api repos/${{ github.repository }}/commits/${{ github.sha }} | jq -r '.files[].filename' | paste -sd "," -)
-            echo "Files changed in this push:"
-            echo "$PUSH_FILES"
-            echo "CHANGED_FILES=${PUSH_FILES}" >> $GITHUB_ENV
+            FILE_LIST=""
+            for file in $(git diff --name-only ${{ github.event.before }} ${{ github.sha }} | grep -E 'pyproject.toml|package.json'); do
+              if [[ $file == *"pyproject.toml" ]]; then
+                old_version=$(git show ${{ github.event.before }}:$file | grep '^version\s*=' | cut -d '"' -f2)
+                new_version=$(grep '^version\s*=' "$file" | cut -d '"' -f2)
+              elif [[ $file == *"package.json" ]]; then
+                old_version=$(git show ${{ github.event.before }}:$file | jq -r '.version')
+                new_version=$(jq -r '.version' "$file")
+              fi
+              if [ "$old_version" != "$new_version" ]; then
+                FILE_LIST+="$file,"
+              fi
+            done
+            FILE_LIST=${FILE_LIST%,}  # remove trailing comma
+            echo "Files with version changes in this push:"
+            echo "$FILE_LIST"
+            echo "CHANGED_FILES=${FILE_LIST}" >> $GITHUB_ENV
             echo "IMAGE_TAG=" >> $GITHUB_ENV
           fi
     
@@ -108,11 +118,6 @@ jobs:
 
           echo "IMAGES_TO_BUILD=${IMAGES_TO_BUILD[*]}" >> $GITHUB_ENV
           echo "Images to build: ${IMAGES_TO_BUILD[*]}"
-
-          # # Create matrix
-          # matrix_include=$(for image in "${IMAGES_TO_BUILD[@]}"; do echo "{\"image_name\":\"${image}\"}"; done | jq -s . | tr -d '[:space:]')
-          # MATRIX="{\"include\":$matrix_include}"
-          # echo $MATRIX
 
           # Create matrix
           matrix_include=$(for image in "${IMAGES_TO_BUILD[@]}"; do
@@ -207,5 +212,3 @@ jobs:
               echo "STATUS=failure" >> $GITHUB_ENV
               exit 1
           fi
-
-
