--- a/.github/workflows/v2-docker-build-push.yml
+++ b/.github/workflows/v2-docker-build-push.yml
@@ -31,6 +31,7 @@ on:
         required: false
 
   push:
+    branches: [ main ]
     paths:
       - '**/pyproject.toml'
       - '**/package.json'
