--- a/aiverify-portal/package.json
+++ b/aiverify-portal/package.json
@@ -1,6 +1,6 @@
 {
   "name": "aiverify-portal",
-  "version": "2.0.2",
+  "version": "2.0.2-test",
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack",
