trigger image release on version change

--- a/.github/workflows/v2-docker-build-push.yml
+++ b/.github/workflows/v2-docker-build-push.yml
@@ -33,11 +33,11 @@ on:
         description: 'Tag for the image, e.g. 2.0.2'
         required: false
 
-  # push:
-  #   branches: [ main, ci/release-docker-image ]
-  #   paths:
-  #     - '**/pyproject.toml'
-  #     - '**/package.json'
+  push:
+    branches: [ main ]
+    paths:
+      - '**/pyproject.toml'
+      - '**/package.json'
 
 # Allow one concurrent deployment
 concurrency:
