Checkout current branch

--- a/.github/workflows/v2-smoke-test.yml
+++ b/.github/workflows/v2-smoke-test.yml
@@ -37,7 +37,7 @@ jobs:
       - name: Checkout Code
         uses: actions/checkout@v4
         with:
-          ref: main
+          ref: ${{ github.ref }}
           repository: aiverify-foundation/aiverify
 
       - name: Checkout Smoke Test Code
