--- a/.github/workflows/v2-smoke-test.yml
+++ b/.github/workflows/v2-smoke-test.yml
@@ -29,7 +29,7 @@ concurrency:
 jobs:
   smoke-test:
     #  Run only when PR is approved
-    if: (github.event_name == 'pull_request') || github.event_name == 'workflow_dispatch' || github.event_name == 'push'
+    if: (github.event_name == 'pull_request' || github.event_name == 'workflow_dispatch' || github.event_name == 'push')
     runs-on: ubuntu-latest
     timeout-minutes: 60
 
@@ -153,7 +153,7 @@ jobs:
           cd smoke-testing
           npm install
           npx playwright install --with-deps
-          URL=http://localhost:3000 npx playwright test tests/03-smoke.spec.js
+          URL=http://127.0.0.1:3000 npx playwright test tests/03-smoke.spec.js
 
       # - name: Upload Playwright Traces
       #   if: always()
